--- a/webapp/views/css/style.css
+++ b/webapp/views/css/style.css
@@ -4,7 +4,7 @@ body {
 
     font-family: "Avenir", "Open Sans", sans-serif;
 
-    background-image: url('../images/sfondo.jpeg');
+    background-image: url('../images/background.jpeg');
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -168,5 +168,132 @@ body {
     cursor: not-allowed;
 }
 
+#chat-btn {
+    position: fixed;
+    bottom: 0px;
+    right: 50px;
+    background: darkred;
+    /* background: rgb(0, 0, 0); */
+    width: 200px;
+    height: 40px;  
+    text-align: center;
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
+    box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.6), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    z-index: 2;
+}
+
+.container-chat{
+    position: fixed;
+    margin-top: 5rem;
+    right:30px;
+    bottom:20px;  
+    width:350px;
+    max-width: 85vw;
+    max-height:100vh;
+    border-radius:5px;  
+    background: white;
+    display:none;
+    flex-direction:column;
+    z-index: 2; 
+    box-shadow: 0px 3px 70px 3px rgb(66, 66, 66);
+}
+
+.chat-box-header {
+    background: darkred;
+    /* background: rgb(0, 0, 0); */
+    height:50px;
+    border-top-left-radius:5px;
+    border-top-right-radius:5px; 
+    color:white;
+    text-align:center;
+    font-size:20px;
+    padding-top:10px;
+}
+.chat-box-toggle {
+    float:right;
+    margin-right:15px;
+    cursor:pointer;
+}
+.chat-box{
+    height: 370px;
+    overflow:hidden;
+}
+.messages{
+    height: 370px;
+    overflow-y:scroll;
+}
+
+.msgCtn1{
+    margin: 6px 0;
+    margin-right: 100px;
+    margin-left: 10px;
+    color: rgb(0, 0, 0);
+    padding: 1rem 1rem;
+    float: left;
+    text-align: left;
+    background-color: #c6c6c6;
+    /* background-color: #9dabe0; */
+    border-radius: 20px 20px 20px 0px;
+    font-size: 16px;
+}
+.msgCtn2{
+    margin: 6px 0;
+    margin-left: 200px;
+    margin-right: 10px;
+    color: rgb(0, 0, 0);
+    padding: 1rem 1rem;
+    text-align: right;
+    /* background-color: #a6d0a7; */
+    background-color: #ff7070;
+    float: right;
+    border-radius: 20px 20px 0 20px;
+    font-size: 16px;
+}
+.msgForm{
+    display:flex;
+    flex-direction:row;
+    height: 40px;
+    width: 97%;
+    background: #fff;
+    position: relative;
+    margin: 5px;
+    padding: 10px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    border: 1px solid #ccc;
+}
+.input{
+    height: 20px;
+    width: 80%;
+    border: none;
+    /* padding-right: 20px; */
+    /* width: 265px; */
+    font-size: 16px;
+    background: none;
+}
+.input:focus:-webkit-placeholder{
+    background-color:white;
+    color: transparent;
+}
+.send-btn{
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    width: 50px;
+    height: 20px;
+    float: right;
+    display:flex;
+    justify-content:center;
+    text-transform: uppercase;
+    align-items:center;
+    background-color: #ffffff;
+    /* color: #a6d0a7; */
+    color: #ff7070;
+    border:none;
+    font-size: 14px;
+}
 
 
