--- a/webapp/views/index.ejs
+++ b/webapp/views/index.ejs
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css/index.css" type="text/css">
-    <link rel="stylesheet" href="css/stile.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <meta charset="UTF-8">
@@ -18,12 +17,12 @@
         <div class="my-navbar-menù">
             <a href="/">Home</a>
             <%if (connected==true){%>
-                <a href="profilo">Profilo</a>
+                <a href="profile">Profile</a>
                 <form action='logout'>
                     <button>LOGOUT</button>
                 </form> 
             <%}else{%>
-                <div style="display:none">><a href="profilo">Profilo</a></div>
+                <div style="display:none">><a href="profile">Profile</a></div>
                 <form action='login'>
                     <button>LOGIN</button>
                 </form> 
@@ -34,9 +33,35 @@
     <div class="main">
         <div class="main-box soft-shadow">
             <br>
-           
+            <h1>Welcome to Recipe Cove, the perfect place to find any kind of recipe. Here you can find any food-ralated information. Enjoy!</h1>
             <br>
-            <h3>Accedi con Google per iniziare</h3>
+
+            <form id='search' class="md" action="https://localhost:3000/results_recipe" method="POST">
+                <div class="container">
+                    <div class="row justify-content-md-center">
+                        <div class="col-md-auto">
+                            <h3>Insert the name of a Recipe</h3>
+                            <div class="col col-lg-15">
+                                <div class="input-group">
+                                    <input type="text" name="search" class="form-control" id="searchTitle validationServer03" placeholder="Search for a recipe..." aria-describedby="validationServer03Feedback" required>
+                                    <div id="validationServer03Feedback" class="invalid-feedback">
+                                        Please provide a valid Recipe
+                                    </div>
+                                    <span class="input-group-btn">
+                                        <button class="btn" style="background-color: rgb(195, 195, 195);" type="submit">
+                                            <i class="bi bi-search" style="size: 10px;"></i>
+                                        </button>
+                                    </span>
+                                </div>
+                            </div>    
+                        </div>
+                    </div>
+                </div>
+            </form>
+            
+            <br>
+            <br>
+            <h3>Login with your Google account to access additional functionalities</h3>
             <%if (connected==false){%>
             <form action='login'>
                 <button class="search-button soft-shadow"><img width="25px" heigth="25px" style="margin-bottom: 5px; margin-right: 5px" src="https://static.cdnlogo.com/logos/g/35/google-icon.svg">Login</button>     
@@ -47,10 +72,8 @@
             </form>
             <%}%>
 
-            <br>
-            
-                      
-        </div>
+                       
+        </div> 
         
     </div>
 </body>
