--- a/webapp/views/profile.ejs
+++ b/webapp/views/profile.ejs
@@ -2,14 +2,14 @@
 <html lang="en">
     <% if (connected==true){ %>
 <head>
-    <link rel="stylesheet" href="css/profilo.css" type="text/css">
-    <link rel="stylesheet" href="css/stile.css" type="text/css">
+    <link rel="stylesheet" href="css/profile.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profilo</title>
+    <title>Profile</title>
 </head>
 <body>
     <div class="my-navbar">
@@ -19,12 +19,12 @@
         <div class="my-navbar-menù">
             <a href="/">Home</a>
             <%if (connected==true){%>
-                <a href="profilo">Profilo</a>
+                <a href="profile">Profile</a>
                 <form action='logout'>
                     <button>LOGOUT</button>
                 </form> 
             <%}else{%>
-                <div style="display:none"><a href="profilo">Profilo</a></div>
+                <div style="display:none">><a href="profile">Profile</a></div>
                 <form action='login'>
                     <button>LOGIN</button>
                 </form> 
@@ -41,9 +41,9 @@
                 <div class=barra-princ-nome>
                     <h3><%= info_utente.name %></h3>
                     <p>
-                        Nome: <%= info_utente.given_name %><br>
-                        Cognome: <%= info_utente.family_name %><br>
-                        Nazionalità: <%= info_utente.locale%>
+                        Name: <%= info_utente.given_name %><br>
+                        Surname: <%= info_utente.family_name %><br>
+                        Nationality: <%= info_utente.locale%>
                     </p>
                 </div>
                 <div class="settings">
@@ -57,27 +57,29 @@
             <div class="colonne">
                 <div class="col-six">
                     <br>
-                    <h5>Ecco il tuo calendario</h5>
+                    <h5>Here is your Calendar</h5>
                     <br> 
                     <% if (info_utente.calendar!=""){ %>
                         <a href="/add_calendar"><button disabled class="calendario"><i class="bi bi-plus"></i></button></a>
-                        <a href="/delete_calendar"><button class="calendario"><i class="bi bi-dash"></i></button></a>
+                        <a href="https://localhost:3001/delete_calendar?id=<%=info_utente.id%>&google_token=<%=google_token%>"><button class="calendario"><i class="bi bi-dash"></i></button></a>
                         <br><br>  
                         <iframe src="https://calendar.google.com/calendar/embed?src=<%= info_utente.calendar %>&src=it.italian%23holiday%40group.v.calendar.google.com&ctz=Europe%2FRome" style="border: 0" width="90%" height="400" frameborder="0" scrolling="no"></iframe>
                     <% } else { %>
-                        <a href="/add_calendar"><button class="calendario"><i class="bi bi-plus"></i></button></a>
+                        <a href="https://localhost:3001/add_calendar?id=<%=info_utente.id%>&google_token=<%=google_token%>"><button class="calendario"><i class="bi bi-plus"></i></button></a>
                         <a href="/delete_calendar"><button disabled class="calendario"><i class="bi bi-dash"></i></button></a>
                         <br><br>  
-                        <p style="font-size: 15px">Crea il tuo calendario</p>
+                        <p style="font-size: 15px">Create your Recipe Calendar</p>
                     <% } %>
                 </div>
                 <div class="col-dx">
+                    <br>
+                    <h5>Recipes you like:</h5>
                     <br>
                     <ul style="text-align:left;">
                     <% for (var i=0; i<info_utente.my_list.length; i++){ %>
                         <li>
                             <%= info_utente.my_list[i]%>
-                            <button class="delete-btn" onclick='javascript:rimuovi("<%=info_utente.id%>","<%=info_utente.my_list[i]%>")'><i class='bi bi-trash3'></i></button>
+                            <button class="delete-btn" onclick='javascript:remove("<%=info_utente.id%>","<%=info_utente.my_list[i]%>")'><i class='bi bi-trash3'></i></button>
                             <br><br>
                         </li> 
                     <%}%>
@@ -90,9 +92,9 @@
         </div>
     </div>
     <script type="text/javascript">
-        function rimuovi(id_utente, title){
+        function remove(id_utente, title){
             var xhttp = new XMLHttpRequest();
-            xhttp.open("POST", '/eliminaPreferiti?id='+id_utente.toString()+"&title="+ title, true);
+            xhttp.open("POST", '/removeFavorites?id='+id_utente.toString()+"&title="+ title, true);
             xhttp.send();
             setTimeout(reload,300);
         }
