GUI for Add event to Calendar, Error pages

--- a/calendar/views/add_event.ejs
+++ b/calendar/views/add_event.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- <link rel="stylesheet" href="/webapp/views/css/style.css" type="text/css"> -->
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
@@ -12,11 +13,11 @@
 </head>
 <body>
     <div class="my-navbar">
-        <h3>
+        <h3 class="recipe-cove-logo" onclick="location.href='/'">
             Recipe Cove
         </h3>
         <div class="my-navbar-menù">
-            <a href="https://localhost:3000/">Home</a>
+            <!-- <a href="https://localhost:3000/">Home</a> -->
             <%if (connected=='true'){%>
                 <a href="https://localhost:3000/profile">Profile</a>
                 <form action='https://localhost:3000/logout'>
@@ -32,32 +33,35 @@
     </div>
 
     <div class="main">
-    <div class="main-box soft-shadow">
+    <div class="main-box soft-shadow container-add-event">
 
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="col-md-auto">
             <br>
-            <h3>Fill the following fields to add an event to your Calendar!</h3>
-            <form class="row g-3 md" id='search' action="https://localhost:3001/add_event?user_id=<%=user_id%>&google_token=<%=google_token%>" method="POST">
-                <div class="col-md-6">
+			<h3>Add event</h3>
+            <p>Fill the following fields to add an event to your Calendar!</p>
+            <form class="row g-3 md add-event-form" id='search' action="https://localhost:3001/add_event?user_id=<%=user_id%>&google_token=<%=google_token%>" method="POST">
+                <div class="add-event-row">
                   <label for="inputSummary" class="form-label">Summary</label>
                   <input type="text" class="form-control" id="inputSummary" value="Prepare the recipe: <%=title%>" readonly="readonly" name="summary" required>
                 </div>
-                <div class="col-12">
+                <div class="add-event-row">
                   <label for="inputDescription" class="form-label">Description</label>
-                  <input type="text" class="form-control" id="inputDescription" placeholder="The event description" name="description">
+                  <!-- <input type="text" class="form-control" id="inputDescription" placeholder="The event description" name="description"> -->
+				  <textarea class="form-control add-event-text-area" id="inputDescription" rows="3" name="description" placeholder="The event description"></textarea>
                 </div>
-                <div class="col-md-2">
+				<% current_date = new Date() %>
+                <div class="add-event-row">
                     <label for="inputStartDate" class="form-label">Start Date</label>
-                    <input type="date" id="inputStartDate" value="2023-10-20" name="start_date">
+                    <input type="date" id="inputStartDate" name="start_date" value="<%=current_date.toISOString().slice(0,10)%>">
                 </div>
-                <div class="col-md-2">
+                <div class="add-event-row">
                     <label for="inputEndDate" class="form-label">End Date</label>
-                    <input type="date" id="inputEndDate" value="2023-10-24" name="end_date">
+                    <input type="date" id="inputEndDate" name="end_date" value="<%=current_date.toISOString().slice(0,10)%>">
                 </div>
                 
-                <div class="col-md-4">
+                <div class="add-event-row">
                   <label for="inputColor" class="form-label">Event Color</label>
                   <select id="inputColor" class="form-select" name="color">
                     <option selected value="1">Pale Blue</option>
@@ -75,7 +79,7 @@
                 </div>
                 
                 <div class="col-12">
-                  <button type="submit" class="btn btn-primary" style="background-color: rgb(176,0,0); border:0;">Submit</button>
+                  <button type="submit" class="add-event-submit-button">Create Recipe Event</button>
                 </div>
               </form>
 
